# qiskit-scheduling-extension

./: README.md  requirements.txt  setup.cfg  tox.ini
.github/workflow/: release.yaml
.github/workflows/: release.yaml
qiskit_scheduling_extension/: __init__.py  compact.py  plugin.py
test/: __init__.py  test_compact.py  test_plugin_compact.py
