[metadata]
name = qiskit-scheduling-extension
summary = Qiskit transpiler plugins for extension of scheduling passes
description-file =
    README.md
long_description_content_type = text/markdown
author = Toshinari Itoko
author-email = itoko@jp.ibm.com
home_page = https://github.com/qiskit-community/qiskit-scheduling-extension
project_urls =
    Bug Tracker = https://github.com/qiskit-community/qiskit-scheduling-extension/issues
license = Apache-2
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
requires-python = >=3.8

[files]
packages =
    qiskit_scheduling_extension

[entry_points]
qiskit.transpiler.scheduling =
    compact = qiskit_scheduling_extension.plugin:CompactSchedulingPlugin
